--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'org.jetbrains.kotlin.multiplatform' version '1.3.72'
+    id 'org.jlleitschuh.gradle.ktlint' version '9.3.0'
 }
 repositories {
     mavenCentral()
@@ -8,6 +9,7 @@ group 'com.example'
 version '0.0.1'
 
 apply plugin: 'maven-publish'
+apply plugin: 'org.jlleitschuh.gradle.ktlint'
 
 kotlin {
     // For ARM, should be changed to iosArm32 or iosArm64
