--- a/build.gradle
+++ b/build.gradle
@@ -1,2 +1,19 @@
-group 'com.juanmedina'
-version '0.0.1'
+plugins {
+    id 'org.jlleitschuh.gradle.ktlint' version '9.3.0'
+    id 'org.jetbrains.kotlin.multiplatform' version '1.3.72'
+}
+
+repositories {
+    mavenCentral()
+}
+
+subprojects {
+
+    group 'com.juanmedina'
+
+    repositories {
+        mavenCentral()
+    }
+
+    apply plugin: 'org.jlleitschuh.gradle.ktlint'
+}
