--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,17 +1,8 @@
 plugins {
-    id 'org.jetbrains.kotlin.multiplatform' version '1.3.72'
-    id 'org.jlleitschuh.gradle.ktlint' version '9.3.0'
+    id 'org.jetbrains.kotlin.multiplatform'
 }
 
-repositories {
-    mavenCentral()
-    mavenLocal()
-}
-
-group 'com.juanmedina'
 version '0.0.1'
-
-apply plugin: 'org.jlleitschuh.gradle.ktlint'
 
 kotlin {
     jvm()
