--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,7 +10,8 @@ edit_uri: '/juan-medina/kecs/blob/main/api/docs'
 pages:
     - Home: 'index.md'
     - What is a ECS: 'ecs.md'
-    - Example : 'example.md'
+    - User Guide: 'guide.md'
+    - Advance Example : 'example.md'
     - API Documentation: 'packages/kecs/index.md'
 theme:
     name: material
