--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'org.jetbrains.kotlin.multiplatform'
-    id 'org.jetbrains.dokka' version "0.10.0"
+    id 'org.jetbrains.dokka' version "0.10.1"
 }
 
 repositories {
@@ -57,4 +57,7 @@ kotlin {
 dokka {
     outputDirectory = "${project.rootDir}/api/docs/packages"
     outputFormat = "gfm"
+    configuration {
+        includes = ["${projectDir}/src/Module.md".toString()]
+    }
 }
