--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,7 @@ pages:
     - API Documentation: 'packages/-k-e-c-s/index.md'
 theme:
     name: material
+    logo: 'icon.svg'
     palette:
         scheme: slate
 extra_css:
