--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,14 @@
+buildscript {
+    dependencies {
+        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.+"
+    }
+}
+
 plugins {
     id 'org.jlleitschuh.gradle.ktlint' version '9.3.0'
     id 'org.jetbrains.kotlin.multiplatform' version '1.3.72'
+    id "base"
+    id "maven-publish"
 }
 
 repositories {
