--- a/core/build.gradle
+++ b/core/build.gradle
@@ -8,10 +8,23 @@ repositories {
     jcenter()
 }
 
-version '0.0.1'
-
 apply plugin: 'maven-publish'
 apply plugin: 'org.jetbrains.dokka'
+apply plugin: 'com.jfrog.bintray'
+
+def GROUP_ID='com.juanmedina'
+def ARTIFACT_ID= 'kecs'
+
+def BINTRAY_REPOSITORY= 'kecs'
+def BINTRAY_ORGINIZATION= 'juan-medina'
+
+def ISSUE_URL= 'https://github.com/juan-medina/kecs/issues'
+def SITE_URL= 'https://juan-medina.github.io/kecs/'
+def VCS_URL= 'https://github.com/juan-medina/kecs.git'
+def LIBRARY_VERSION_NAME='1.0.0'
+
+group GROUP_ID
+version LIBRARY_VERSION_NAME
 
 kotlin {
     jvm()
@@ -53,6 +66,70 @@ kotlin {
         }
     }
 }
+
+afterEvaluate {
+    project.publishing.publications.all {
+        // rename artifacts
+        groupId = GROUP_ID
+        if (it.name.contains('metadata')) {
+            artifactId = "$ARTIFACT_ID"
+        } else {
+            artifactId = "$ARTIFACT_ID-$name"
+        }
+    }
+}
+
+def getBintrayUserProperty() {
+    return hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
+}
+
+def getBintrayApiKeyProperty() {
+    return hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
+}
+
+bintray {
+    //A user name of bintray to A, and API key of Bintray to B.I do not want to include API Key in git,
+    // so I am gradle.properties writing locally.
+    // Gradle's property file is read in the order of gradle in the home directory> gradle in the project directory,
+    // so if it is written in property in the home directory, it will be useful for other projects as well.
+    user = getBintrayUserProperty()
+    key = getBintrayApiKeyProperty()
+
+    publish = true
+
+    pkg {
+        repo = BINTRAY_REPOSITORY
+        name = ARTIFACT_ID
+        userOrg = BINTRAY_ORGINIZATION
+        licenses = ['Apache-2.0']
+        vcsUrl = VCS_URL
+        websiteUrl = SITE_URL
+        issueTrackerUrl = ISSUE_URL
+
+        version {
+            name = LIBRARY_VERSION_NAME
+            vcsTag = LIBRARY_VERSION_NAME
+            released = new Date()
+        }
+    }
+}
+
+// This specifies the publications to upload to bintray before doing the bintrayUpload gradle task.
+//In the mpp configuration of one module after 1.3,
+// it is not uploaded unless you explicitly specify artifacts in publications like this.
+// It is not necessary to have the findAll part,
+// [project name]-kotlinMultiplatformbut a directory containing only pom files will be uploaded, so it is better to exclude it.
+bintrayUpload.doFirst {
+    publications = publishing.publications.collect {
+        it.name
+    }.findAll {
+        it != "kotlinMultiplatform"
+    }
+}
+
+//The task of bintrayUpload depends on publishToMavenLocal set in the previous section.
+// This will create maven artifacts when running bintrayUplaod's task.
+bintrayUpload.dependsOn publishToMavenLocal
 
 dokka {
     outputDirectory = "${project.rootDir}/api/docs/packages"
