--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,8 @@ subprojects {
 
     apply plugin: 'org.jlleitschuh.gradle.ktlint'
 }
+
+clean {
+    delete 'docs'
+    delete 'api/docs/packages'
+}
